samples/_failures_safe/1761506522_95316c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8f336ac.c: In function ‘main’:
./samples/SAFE/__tmp_f8f336ac.c:134:25: error: missing terminating " character
  134 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_f8f336ac.c:134:9: error: expected expression at end of input
  134 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_f8f336ac.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8f336ac.c:134:9: error: expected declaration or statement at end of input
